styles/style.css
:root
{
    --background-color: #1b222b;
    --text-color: #ebeceb;
    --text-color-important: white;
}

body
{
    background-color: var(--background-color);
	font-family: Arial, Helvetica, sans-serif;
    color: var(--text-color);
    margin: auto;
}

nav
{
    width: 100%;
    height: 100%;
    display: flex;
    position: fixed;
    align-items: center;
}

h1, h2, h3, h4
{
    margin: 20px 20px;
    display: inline-block;
    vertical-align: middle;
}

p
{
    line-height: 1.25em;
    margin: 10px 20px 20px;
}

section
{
    margin-left: 490px;
    margin-right: 30px;
}

.nav-bar
{
    margin-left: 28px;
    margin-bottom: 10px;
}

.nav-list
{
    list-style-type:none;
    vertical-align: middle;
}

.nav-list:hover > li
{
    opacity: 0.75;
}

.nav-list > li:hover
{
    opacity: 1;
}

.nav-link
{
    float: left;
    font-size: 48px;
    margin-bottom: 49px;
    text-decoration: none;
    text-transform: uppercase;
    color: var(--text-color-important);
}

.centered
{
    display: flex;
    justify-content: center;
}

/* https://stackoverflow.com/a/4407335 */
.noselect
{
    -webkit-touch-callout: none; /* iOS Safari */
      -webkit-user-select: none; /* Safari */
       -khtml-user-select: none; /* Konqueror HTML */
         -moz-user-select: none; /* Old versions of Firefox */
          -ms-user-select: none; /* Internet Explorer/Edge */
              user-select: none; /* Non-prefixed version, currently
                                    supported by Chrome, Edge, Opera and Firefox */
}

.project-version-container
{
    right: 0;
    bottom: 0;
    display: flex;
    position: fixed;
}

.icon-container
{
    margin: 10px;
}

.icon-container:hover
{
    margin-bottom: 15px;
}

.icon-button
{
    padding: 0;
    background-color: transparent;
    border: 1px solid transparent;
    border-radius: 16px;
}

.icon-button > img
{
    width: 25px;
    height: 25px;
    padding: 4px;
    margin: 0;
    display: flex;
    cursor: pointer;
}

